--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^1.35.3",
     "date-fns": "^2.28.0",
     "next": "^12.1.0",
     "react": "17.0.1",
